--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -12,17 +12,16 @@
 			"problemMatcher": "$msCompile"
 		},
 		{
-			"label": "Watch: Models Tests",
+			"label": "Watch: Tests",
 			"type": "shell",
 			"command": "dotnet",
 			"args": [
 				"watch",
 				"--project",
-				"${workspaceFolder}/src/TReminder.Models/TReminder.Models.csproj",
+				"${workspaceFolder}/tests/Tests.csproj",
 				"test",
-				"${workspaceFolder}/tests/TReminder.Tests.Models/TReminder.Tests.Models.csproj",
 				"-o",
-				"${workspaceFolder}/tests/TReminder.Tests.Models/out"
+				"${workspaceFolder}/tests//out"
 			],
 			"group": {
 				"kind": "build",
